# idea-capture

./: .gitignore  README.md
core/: Cargo.toml
core/src/: error.txt  lib.rs  main.rs
core/src/audio/: mod.rs  test.txt
core/src/nlp/: lib.txt  mod.rs  output.txt
core/tests/: integration_test.rs
mobile/IdeaCapture/: package-lock.json  package.json
