[package]
name = "idea-capture-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
hound = "3.5.0"           # WAV file handling
symphonia = "0.5.3"       # Audio decoding
cpal = "0.15.2"           # Cross-platform audio I/O

chrono = "0.4.40"

# Speech-to-text
whisper-rs = "0.8.0"      # Whisper binding (requires separate model download)

# NLP and machine learning
rust-bert = "0.23.0"      # Transformers for Rust
tokenizers = "0.14.0"     # Fast tokenizers
tract-onnx = "0.20.7"     # ONNX runtime for ML models

# Storage
sled = "0.34.7"           # Embedded database
bincode = "1.3.3"         # Binary serialization
serde = { version = "1.0", features = ["derive"] }

# React Native bridging
jni = { version = "0.21.1", optional = true }
ffi-support = { version = "0.4.2", optional = true }

# Async runtime
tokio = { version = "1.29.1", features = ["full"] }

# Utils
thiserror = "1.0.43"      # Error handling
log = "0.4.19"            # Logging

tch = "0.17.0"

[lib]
name = "idea_capture_core"
crate-type = ["lib", "cdylib", "staticlib"] # For FFI compatibility

[features]
default = []
android = ["jni"]
ios = ["ffi-support"]
[[test]]
name = "integration_test"
