[package]
name = "idea-capture-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "idea_capture_core"
crate-type = ["lib", "cdylib", "staticlib"] # For FFI compatibility
[dependencies]
chrono = "0.4.41"
# Audio
hound = "3.5.0"
symphonia = "0.5.3"
cpal = { version = "0.15.2", features = ["jack", "asio"] }  # Enable backends explicitly

# Whisper (requires vendored libwhisper.a)
whisper-rs = { version = "0.8.0" }  # Builds libwhisper from source

# ML (rust-bert already vendors most deps, but ensure ONNX is covered)
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }  # Downloads LibTorch automatically
tract-onnx = "0.20.7"  # Pure Rust, no system deps
tch = { version = "0.17.0", features = ["download-libtorch"] }  # Auto-downloads LibTorch

# Storage (sled/bincode are pure Rust)
sled = "0.34.7"
bincode = "1.3.3"

# FFI (no system deps)
jni = { version = "0.21.1", optional = true }
ffi-support = { version = "0.4.2", optional = true }

# Async (pure Rust)
tokio = { version = "1.29.1", features = ["full"] }
[features]
default = []
android = ["jni"]
ios = ["ffi-support"]
[[test]]
name = "integration_test"
